<resources>
    <string name="app_name">Authenticator</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome">Welcome!</string>
    <string name="successfully_authenticated">Successfully Authenticated!</string>
    <string name="logout">Logout</string>
</resources>
