<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#123456">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/title" />
    <ProgressBar
        android:id="@+id/logprogress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>
    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        />

    <EditText
        android:id="@+id/logusername"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_username"
        android:ems="10"
        android:hint="@string/email"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/logpassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_pass"
        android:background="#ffffff"
        android:textColor="@color/black"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/logloginbutton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:backgroundTint="@color/buttoncolor"
        android:background="@drawable/ripple_effect"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/don_t_have_an_account_yet"/>
        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:textColor="@color/buttoncolor"
            android:text="@string/signup"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

</LinearLayout>